# meditrack

./: .gitignore  README.md  RELEASE_NOTES_v0.2.0.md  Taskfile.yml  drizzle.config.ts  get-pubkey.ps1  get-signature.ps1  install-config-cli.ps1  latest.json  package.json  prepare-release.ps1  set-signing-key.ps1  tsconfig.json
.github/workflows/: release.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/crates/config/: Cargo.toml
apps/web/src-tauri/db/entity/: Cargo.toml  ENTITY_MODEL.md
apps/web/src-tauri/db/entity/src/: id.rs  lib.rs
apps/web/src-tauri/db/entity/src/customer/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/inventory_item/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/inventory_item_barcode/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/inventory_stock_history/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/manufacturer/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/medicine_form/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/setting/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/special_order/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/special_order_item/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/supplier/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/supplier_inventory_item/: dto.rs  mod.rs
apps/web/src-tauri/db/entity/src/user/: dto.rs
apps/web/src-tauri/db/migration/: Cargo.toml  README.md
apps/web/src-tauri/db/migration/src/: lib.rs  m20250130_000001_create_enums.rs  m20250130_000002_create_staff_table.rs  m20250130_000003_create_roles_table.rs  m20250130_000004_create_users_table.rs  m20250131_000001_5_create_manufacturers_table.rs  m20250131_000001_6_create_medicine_forms_table.rs  m20250131_000001_create_customers_table.rs  m20250131_000002_1_create_inventory_stock_table.rs  m20250131_000002_2_create_inventory_price_history_table.rs  m20250131_000002_3_create_inventory_item_barcodes_table.rs  m20250131_000002_create_inventory_items_table.rs  m20250131_000003_create_suppliers_table.rs  m20250131_000004_create_special_orders_table.rs  m20250131_000005_create_special_order_items_table.rs  m20250131_000006_create_supplier_inventory_items_table.rs  m20250131_000007_create_settings_table.rs  m20250201_000001_create_inventory_stock_history_table.rs
apps/web/src-tauri/db/service/: Cargo.toml
apps/web/src-tauri/db/service/src/: lib.rs
apps/web/src-tauri/db/service/src/inventory/: medicine_forms.rs  mod.rs  stock_history.rs
apps/web/src-tauri/db/service/src/manufacturer/: mod.rs  tests.rs
apps/web/src-tauri/db/service/src/pagination/: mod.rs
apps/web/src-tauri/db/service/src/settings/: mod.rs
apps/web/src-tauri/db/service/src/user/: mod.rs
apps/web/src-tauri/src/: lib.rs
apps/web/src-tauri/src/ipc/: mod.rs
apps/web/src-tauri/src/ipc/commands/: mod.rs
apps/web/src-tauri/src/ipc/commands/inventory/: medicine_forms.rs  mod.rs
apps/web/src-tauri/src/ipc/commands/manufacturer/: mod.rs
apps/web/src-tauri/src/ipc/commands/user/: mod.rs
apps/web/src-tauri/src/ipc/params/: mod.rs
apps/web/src-tauri/src/ipc/response/: mod.rs
apps/web/src/api/: inventory.api.ts  manufacturer.api.ts  medicine-forms.api.ts  onboarding.api.ts  settings.api.ts  user.api.ts
apps/web/src/components/: app-sidebar.tsx  language-switcher.tsx  manual-update-check.tsx  mode-toggle.tsx  update-dialog.tsx
apps/web/src/hooks/: index.ts  use-app-updater.ts  use-auto-archive.ts  use-inventory.ts  use-manufacturers.ts  use-medicine-forms.ts  use-notifications.ts  use-order-alerts.ts  use-order-status-config.ts  use-orders-db.ts  use-orders.ts  use-seed-data.ts  use-settings-db.ts  use-settings.ts  use-stock-history.ts  use-suppliers.ts  use-users-db.ts  use-users.ts
apps/web/src/lib/: constants.ts  db.ts  (+8 more)
docs/: MANUAL_RELEASE_GUIDE.md  TAURI_UPDATER_GUIDE.md
scripts/data-extractor/: main.py  pyproject.toml
scripts/data-extractor/data/: categories_summary.md  medicine_forms_categorized.json  medicine_forms_seed.json
(+89 files in other folders)
