[workspace]
members = [".", "db/*", "crates/*"]
resolver = "2"

[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-log = { workspace = true }
tauri-plugin-updater = { workspace = true }

app_config = { workspace = true }
db_entity = { workspace = true }
db_migration = { workspace = true }
db_service = { workspace = true }

[workspace.dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.43"
derive-getters = "0.5.0"
dotenv = "0.15.0"
hostname = "0.4.2"
log = "0.4.29"
maplit = "1.0.2"
pretty_assertions = "1.4.1"
printers = "2.2.1"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rust_decimal = "1.40.0"
sea-orm = "1.1.19"
sea-orm-migration = "1.1.19"
serde = "1.0.228"
serde_json = "1.0.149"
tauri = "2.9.5"
tauri-plugin-log = "2.8.0"
tauri-plugin-updater = "2.9.0"
thiserror = "2.0.18"
tokio = "1.49.0"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
typed-builder = "0.23.2"
url = "2.5.8"
uuid = "1.20.0"

app_config = { path = "crates/config" }
db_entity = { path = "db/entity" }
db_migration = { path = "db/migration" }
db_service = { path = "db/service" }
