[package]
name = "app_config"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "meditrack-config"
path = "src/bin/meditrack-config.rs"

[dependencies]
aes-gcm = { workspace = true }
anyhow = "1.0.95"
argon2 = { workspace = true }
base64 = { workspace = true }
crossterm = "0.28.1"
dirs = "5.0.1"
hostname = { workspace = true }
reratui = "1.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
